Ensure that DLOG(FATAL) also asserts in release-with-asserts builds.

Otherwise patches can land in the CQ which trigger DLOG(FATAL) or assert but then break the main waterfall.

BUG=603166

Review URL: https://codereview.chromium.org/1885933002

Cr-Commit-Position: refs/heads/master@{#388086}

Former-commit-id: 121900aaaac3ee9407ad40dd05e54b6d50b859c9