chrome/browser/lifetime/keep_alive_registry.h
@@ -40,10 +40,10 @@ class KeepAliveRegistry {
   friend struct base::DefaultSingletonTraits<KeepAliveRegistry>;
   // Friend to be able to use Register/Unregister
   friend class ScopedKeepAlive;
-#ifndef NDEBUG
+#if !defined(NDEBUG) || defined(DCHECK_ALWAYS_ON)
   friend std::ostream& operator<<(std::ostream& out,
                                   const KeepAliveRegistry& registry);
-#endif  // NDEBUG
+#endif
 
   KeepAliveRegistry();
   ~KeepAliveRegistry();
@@ -71,8 +71,8 @@ class KeepAliveRegistry {
   DISALLOW_COPY_AND_ASSIGN(KeepAliveRegistry);
 };
 
-#ifndef NDEBUG
+#if !defined(NDEBUG) || defined(DCHECK_ALWAYS_ON)
 std::ostream& operator<<(std::ostream& out, const KeepAliveRegistry& registry);
-#endif  // ndef NDEBUG
+#endif
 
 #endif  // CHROME_BROWSER_LIFETIME_KEEP_ALIVE_REGISTRY_H_
