chrome/browser/lifetime/keep_alive_types.cc
@@ -5,7 +5,7 @@
 #include "chrome/browser/lifetime/keep_alive_types.h"
 #include "base/logging.h"
 
-#ifndef NDEBUG
+#if !defined(NDEBUG) || defined(DCHECK_ALWAYS_ON)
 std::ostream& operator<<(std::ostream& out, const KeepAliveOrigin& origin) {
   switch (origin) {
     case KeepAliveOrigin::APP_CONTROLLER:
@@ -59,4 +59,4 @@ std::ostream& operator<<(std::ostream& out,
   return out << static_cast<int>(restart);
 }
 
-#endif  // ndef NDEBUG
+#endif
