chrome/browser/lifetime/keep_alive_types.h
@@ -43,10 +43,10 @@ enum class KeepAliveOrigin {
 // restarts
 enum class KeepAliveRestartOption { DISABLED, ENABLED };
 
-#ifndef NDEBUG
+#if !defined(NDEBUG) || defined(DCHECK_ALWAYS_ON)
 std::ostream& operator<<(std::ostream& out, const KeepAliveOrigin& origin);
 std::ostream& operator<<(std::ostream& out,
                          const KeepAliveRestartOption& restart);
-#endif  // ndef NDEBUG
+#endif
 
 #endif  // CHROME_BROWSER_LIFETIME_KEEP_ALIVE_TYPES_H_
