net/spdy/hpack/hpack_huffman_decoder.cc
@@ -159,7 +159,7 @@ const uint8_t kCanonicalToSymbol[] = {
 };
 // clang-format on
 
-#ifndef NDEBUG
+#if !defined(NDEBUG) || defined(DCHECK_ALWAYS_ON)
 
 // Only used in DLOG.
 bool IsEOSPrefix(HuffmanWord bits, HuffmanCodeLength bits_available) {
@@ -172,7 +172,7 @@ bool IsEOSPrefix(HuffmanWord bits, HuffmanCodeLength bits_available) {
   return bits == expected;
 }
 
-#endif  // NDEBUG
+#endif  // NDEBUG && !defined(DCHECK_ALWAYS_ON)
 
 }  // namespace
 
